<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/groessenmesser"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="6dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/angle_alpha"
                android:id="@+id/textView"
                android:layout_marginEnd="5dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/txtAngleAlpha"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/undefined"
                android:gravity="end"
                style="@android:style/TextAppearance.DeviceDefault.Medium" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/angle_beta"
                android:id="@+id/textView2"
                android:layout_marginEnd="5dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/txtAngleBeta"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/undefined"
                android:gravity="end"
                style="@android:style/TextAppearance.DeviceDefault.Medium" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/distance_a"
                android:id="@+id/textView3"
                android:layout_marginEnd="5dp"
                android:elegantTextHeight="false" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/txtDistance"
                android:layout_weight="1"
                android:hint="@string/distanceToObject"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:enabled="true"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/result"
                android:id="@+id/textView4" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/txtResult"
                android:layout_weight="1"
                android:enabled="false"
                android:gravity="end" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>